deploy/overlay/object-storage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ob-mn-db
spec:
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
      name: hc
    - protocol: TCP
      port: 9001
      targetPort: 9001
      name: db
  selector:
    app: ob-mn-db
